COMPILER/parser.js
/*
 * Generated by PEG.js 0.10.0.
 *
 * http://pegjs.org/
 */

"use strict";

function peg$subclass(child, parent) {
  function ctor() { this.constructor = child; }
  ctor.prototype = parent.prototype;
  child.prototype = new ctor();
}

function peg$SyntaxError(message, expected, found, location) {
  this.message  = message;
  this.expected = expected;
  this.found    = found;
  this.location = location;
  this.name     = "SyntaxError";

  if (typeof Error.captureStackTrace === "function") {
    Error.captureStackTrace(this, peg$SyntaxError);
  }
}

peg$subclass(peg$SyntaxError, Error);

peg$SyntaxError.buildMessage = function(expected, found) {
  var DESCRIBE_EXPECTATION_FNS = {
        literal: function(expectation) {
          return "\"" + literalEscape(expectation.text) + "\"";
        },

        "class": function(expectation) {
          var escapedParts = "",
              i;

          for (i = 0; i < expectation.parts.length; i++) {
            escapedParts += expectation.parts[i] instanceof Array
              ? classEscape(expectation.parts[i][0]) + "-" + classEscape(expectation.parts[i][1])
              : classEscape(expectation.parts[i]);
          }

          return "[" + (expectation.inverted ? "^" : "") + escapedParts + "]";
        },

        any: function(expectation) {
          return "any character";
        },

        end: function(expectation) {
          return "end of input";
        },

        other: function(expectation) {
          return expectation.description;
        }
      };

  function hex(ch) {
    return ch.charCodeAt(0).toString(16).toUpperCase();
  }

  function literalEscape(s) {
    return s
      .replace(/\\/g, '\\\\')
      .replace(/"/g,  '\\"')
      .replace(/\0/g, '\\0')
      .replace(/\t/g, '\\t')
      .replace(/\n/g, '\\n')
      .replace(/\r/g, '\\r')
      .replace(/[\x00-\x0F]/g,          function(ch) { return '\\x0' + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return '\\x'  + hex(ch); });
  }

  function classEscape(s) {
    return s
      .replace(/\\/g, '\\\\')
      .replace(/\]/g, '\\]')
      .replace(/\^/g, '\\^')
      .replace(/-/g,  '\\-')
      .replace(/\0/g, '\\0')
      .replace(/\t/g, '\\t')
      .replace(/\n/g, '\\n')
      .replace(/\r/g, '\\r')
      .replace(/[\x00-\x0F]/g,          function(ch) { return '\\x0' + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return '\\x'  + hex(ch); });
  }

  function describeExpectation(expectation) {
    return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation);
  }

  function describeExpected(expected) {
    var descriptions = new Array(expected.length),
        i, j;

    for (i = 0; i < expected.length; i++) {
      descriptions[i] = describeExpectation(expected[i]);
    }

    descriptions.sort();

    if (descriptions.length > 0) {
      for (i = 1, j = 1; i < descriptions.length; i++) {
        if (descriptions[i - 1] !== descriptions[i]) {
          descriptions[j] = descriptions[i];
          j++;
        }
      }
      descriptions.length = j;
    }

    switch (descriptions.length) {
      case 1:
        return descriptions[0];

      case 2:
        return descriptions[0] + " or " + descriptions[1];

      default:
        return descriptions.slice(0, -1).join(", ")
          + ", or "
          + descriptions[descriptions.length - 1];
    }
  }

  function describeFound(found) {
    return found ? "\"" + literalEscape(found) + "\"" : "end of input";
  }

  return "Expected " + describeExpected(expected) + " but " + describeFound(found) + " found.";
};

function peg$parse(input, options) {
  options = options !== void 0 ? options : {};

  var peg$FAILED = {},

      peg$startRuleFunctions = { Program: peg$parseProgram, Expression: peg$parseExpression },
      peg$startRuleFunction  = peg$parseProgram,

      peg$c0 = peg$otherExpectation("program"),
      peg$c1 = function(statements) { statements.forEach(cleanUp); return statements.filter(isDefined); },
      peg$c2 = peg$otherExpectation("statement"),
      peg$c3 = function() { },
      peg$c4 = peg$otherExpectation("return statement"),
      peg$c5 = "return",
      peg$c6 = peg$literalExpectation("return", false),
      peg$c7 = function(expression) { return Node('ReturnStatement', { expression }); },
      peg$c8 = peg$otherExpectation("if"),
      peg$c9 = "if",
      peg$c10 = peg$literalExpectation("if", false),
      peg$c11 = function(predicate, statement, elseStatement) {
            return Node('ConditionalStatement', { predicate, statement, elseStatement });
          },
      peg$c12 = peg$otherExpectation("while"),
      peg$c13 = "while",
      peg$c14 = peg$literalExpectation("while", false),
      peg$c15 = function(predicate, statement) {
            return Node('ConditionalLoopStatement', { predicate, statement });
          },
      peg$c16 = peg$otherExpectation("else"),
      peg$c17 = "else",
      peg$c18 = peg$literalExpectation("else", false),
      peg$c19 = function(statement) { return statement; },
      peg$c20 = peg$otherExpectation("function call"),
      peg$c21 = "(",
      peg$c22 = peg$literalExpectation("(", false),
      peg$c23 = ")",
      peg$c24 = peg$literalExpectation(")", false),
      peg$c25 = function(name, args) {
            return Node('FunctionCall', {
              name,
              args,
            });
          },
      peg$c26 = peg$otherExpectation("array lookup"),
      peg$c27 = "[",
      peg$c28 = peg$literalExpectation("[", false),
      peg$c29 = "]",
      peg$c30 = peg$literalExpectation("]", false),
      peg$c31 = function(head, tail) { return [head].concat(tail); },
      peg$c32 = function(expression) { return [expression]; },
      peg$c33 = function() { return []; },
      peg$c34 = peg$otherExpectation("expression statement"),
      peg$c35 = function(expression) { return Node('ExpressionStatement', { expression }); },
      peg$c36 = peg$otherExpectation("compound statement"),
      peg$c37 = "{",
      peg$c38 = peg$literalExpectation("{", false),
      peg$c39 = "}",
      peg$c40 = peg$literalExpectation("}", false),
      peg$c41 = function(inner) { return inner.length ? inner : Node('EmptyStatement'); },
      peg$c42 = peg$otherExpectation("function definition"),
      peg$c43 = function(convention, type, name, args, statement) {
            return Node('FunctionDefinition', {
              convention: convention === "fastcall" ? convention : "stdcall",
              type,
              name,
              args,
              statement,
            });
          },
      peg$c44 = "stdcall",
      peg$c45 = peg$literalExpectation("stdcall", false),
      peg$c46 = "fastcall",
      peg$c47 = peg$literalExpectation("fastcall", false),
      peg$c48 = "",
      peg$c49 = peg$otherExpectation("type specifier"),
      peg$c50 = function(name, modifiers) { return Node('Type', { name, modifiers }); },
      peg$c51 = peg$otherExpectation("formal arguments list"),
      peg$c52 = function(arg) { return [arg]; },
      peg$c53 = function(type, name) { return Node('FormalArgument', { type, name }); },
      peg$c54 = "*",
      peg$c55 = peg$literalExpectation("*", false),
      peg$c56 = function() { return Node('PointerTypeModifier'); },
      peg$c57 = function(capacity) { return Node('ArrayTypeModifier', { capacity: capacity.value }); },
      peg$c58 = ",",
      peg$c59 = peg$literalExpectation(",", false),
      peg$c60 = peg$otherExpectation("variable declaration"),
      peg$c61 = function(type, name, initial) {
            return {
              kind: 'VariableDeclaration',
              type,
              name,
              initial,
            };
          },
      peg$c62 = peg$otherExpectation("assignment"),
      peg$c63 = "=",
      peg$c64 = peg$literalExpectation("=", false),
      peg$c65 = function(value) { return value; },
      peg$c66 = function(leftHandSide, tail) {
            return Node('AssignmentStatement', { leftHandSide, rightHandSide: tail });
          },
      peg$c67 = function(leftOperand, operator, rightOperand) {
            return Node('BinaryOperator', { leftOperand, operator, rightOperand });
          },
      peg$c68 = function(operator, operand) {
            return Node('UnaryOperator', { operand, operator });
          },
      peg$c69 = function(expression) { return expression; },
      peg$c70 = function(array, index) {
          return Node('ArrayDereference', { array, index });
        },
      peg$c71 = peg$otherExpectation("binary operator"),
      peg$c72 = "+",
      peg$c73 = peg$literalExpectation("+", false),
      peg$c74 = "-",
      peg$c75 = peg$literalExpectation("-", false),
      peg$c76 = "/",
      peg$c77 = peg$literalExpectation("/", false),
      peg$c78 = "%",
      peg$c79 = peg$literalExpectation("%", false),
      peg$c80 = "<<",
      peg$c81 = peg$literalExpectation("<<", false),
      peg$c82 = "&",
      peg$c83 = peg$literalExpectation("&", false),
      peg$c84 = "&&",
      peg$c85 = peg$literalExpectation("&&", false),
      peg$c86 = "|",
      peg$c87 = peg$literalExpectation("|", false),
      peg$c88 = "||",
      peg$c89 = peg$literalExpectation("||", false),
      peg$c90 = "^",
      peg$c91 = peg$literalExpectation("^", false),
      peg$c92 = "==",
      peg$c93 = peg$literalExpectation("==", false),
      peg$c94 = ">",
      peg$c95 = peg$literalExpectation(">", false),
      peg$c96 = "<",
      peg$c97 = peg$literalExpectation("<", false),
      peg$c98 = "<=",
      peg$c99 = peg$literalExpectation("<=", false),
      peg$c100 = ">=",
      peg$c101 = peg$literalExpectation(">=", false),
      peg$c102 = ".",
      peg$c103 = peg$literalExpectation(".", false),
      peg$c104 = peg$otherExpectation("unary operator"),
      peg$c105 = "~",
      peg$c106 = peg$literalExpectation("~", false),
      peg$c107 = "!",
      peg$c108 = peg$literalExpectation("!", false),
      peg$c109 = peg$otherExpectation("statement terminator"),
      peg$c110 = ";",
      peg$c111 = peg$literalExpectation(";", false),
      peg$c112 = function() { return Node('EmptyStatement'); },
      peg$c113 = peg$otherExpectation("identifier"),
      peg$c114 = /^[a-zA-Z_]/,
      peg$c115 = peg$classExpectation([["a", "z"], ["A", "Z"], "_"], false, false),
      peg$c116 = /^[a-zA-Z0-9_]/,
      peg$c117 = peg$classExpectation([["a", "z"], ["A", "Z"], ["0", "9"], "_"], false, false),
      peg$c118 = function(chars) { return Node('Identifier', {
          toString() {
            return chars;
          },
        }); },
      peg$c119 = peg$otherExpectation("string"),
      peg$c120 = "\"",
      peg$c121 = peg$literalExpectation("\"", false),
      peg$c122 = function(inner) { return Node('String', { value: inner.join('') }); },
      peg$c123 = peg$otherExpectation("string data"),
      peg$c124 = "\\n",
      peg$c125 = peg$literalExpectation("\\n", false),
      peg$c126 = function() { return '\n'; },
      peg$c127 = "\\r",
      peg$c128 = peg$literalExpectation("\\r", false),
      peg$c129 = function() { return '\r'; },
      peg$c130 = "\\t",
      peg$c131 = peg$literalExpectation("\\t", false),
      peg$c132 = function() { return '\t'; },
      peg$c133 = "\\\\",
      peg$c134 = peg$literalExpectation("\\\\", false),
      peg$c135 = function() { return '\\'; },
      peg$c136 = "\\",
      peg$c137 = peg$literalExpectation("\\", false),
      peg$c138 = /^[0-9]/,
      peg$c139 = peg$classExpectation([["0", "9"]], false, false),
      peg$c140 = function(ascii) {
          return String.fromCharCode(parseInt(ascii.join(''), 10));
        },
      peg$c141 = "\\0",
      peg$c142 = peg$literalExpectation("\\0", false),
      peg$c143 = function() { return String.fromCharCode(0); },
      peg$c144 = "\\x",
      peg$c145 = peg$literalExpectation("\\x", false),
      peg$c146 = /^[0-9a-fA-F]/,
      peg$c147 = peg$classExpectation([["0", "9"], ["a", "f"], ["A", "F"]], false, false),
      peg$c148 = function(ascii) {
          return String.fromCharCode(parseInt(ascii.join(''), 16));
        },
      peg$c149 = /^[^"]/,
      peg$c150 = peg$classExpectation(["\""], true, false),
      peg$c151 = function(normal) { return normal; },
      peg$c152 = peg$otherExpectation("decimal"),
      peg$c153 = function(digits) { return Node('Integer', { value: parseInt(digits.join(''), 10) }); },
      peg$c154 = "0",
      peg$c155 = peg$literalExpectation("0", false),
      peg$c156 = /^[Xx]/,
      peg$c157 = peg$classExpectation(["X", "x"], false, false),
      peg$c158 = function(nibbles) { return Node('Integer', { value: parseInt(nibbles.join(''), 16) }); },
      peg$c159 = peg$otherExpectation("comment"),
      peg$c160 = "/*",
      peg$c161 = peg$literalExpectation("/*", false),
      peg$c162 = "*/",
      peg$c163 = peg$literalExpectation("*/", false),
      peg$c164 = peg$anyExpectation(),
      peg$c165 = peg$otherExpectation("whitespace"),
      peg$c166 = /^[ \t\n\r]/,
      peg$c167 = peg$classExpectation([" ", "\t", "\n", "\r"], false, false),

      peg$currPos          = 0,
      peg$savedPos         = 0,
      peg$posDetailsCache  = [{ line: 1, column: 1 }],
      peg$maxFailPos       = 0,
      peg$maxFailExpected  = [],
      peg$silentFails      = 0,

      peg$result;

  if ("startRule" in options) {
    if (!(options.startRule in peg$startRuleFunctions)) {
      throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
    }

    peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
  }

  function text() {
    return input.substring(peg$savedPos, peg$currPos);
  }

  function location() {
    return peg$computeLocation(peg$savedPos, peg$currPos);
  }

  function expected(description, location) {
    location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos)

    throw peg$buildStructuredError(
      [peg$otherExpectation(description)],
      input.substring(peg$savedPos, peg$currPos),
      location
    );
  }

  function error(message, location) {
    location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos)

    throw peg$buildSimpleError(message, location);
  }

  function peg$literalExpectation(text, ignoreCase) {
    return { type: "literal", text: text, ignoreCase: ignoreCase };
  }

  function peg$classExpectation(parts, inverted, ignoreCase) {
    return { type: "class", parts: parts, inverted: inverted, ignoreCase: ignoreCase };
  }

  function peg$anyExpectation() {
    return { type: "any" };
  }

  function peg$endExpectation() {
    return { type: "end" };
  }

  function peg$otherExpectation(description) {
    return { type: "other", description: description };
  }

  function peg$computePosDetails(pos) {
    var details = peg$posDetailsCache[pos], p;

    if (details) {
      return details;
    } else {
      p = pos - 1;
      while (!peg$posDetailsCache[p]) {
        p--;
      }

      details = peg$posDetailsCache[p];
      details = {
        line:   details.line,
        column: details.column
      };

      while (p < pos) {
        if (input.charCodeAt(p) === 10) {
          details.line++;
          details.column = 1;
        } else {
          details.column++;
        }

        p++;
      }

      peg$posDetailsCache[pos] = details;
      return details;
    }
  }

  function peg$computeLocation(startPos, endPos) {
    var startPosDetails = peg$computePosDetails(startPos),
        endPosDetails   = peg$computePosDetails(endPos);

    return {
      start: {
        offset: startPos,
        line:   startPosDetails.line,
        column: startPosDetails.column
      },
      end: {
        offset: endPos,
        line:   endPosDetails.line,
        column: endPosDetails.column
      }
    };
  }

  function peg$fail(expected) {
    if (peg$currPos < peg$maxFailPos) { return; }

    if (peg$currPos > peg$maxFailPos) {
      peg$maxFailPos = peg$currPos;
      peg$maxFailExpected = [];
    }

    peg$maxFailExpected.push(expected);
  }

  function peg$buildSimpleError(message, location) {
    return new peg$SyntaxError(message, null, null, location);
  }

  function peg$buildStructuredError(expected, found, location) {
    return new peg$SyntaxError(
      peg$SyntaxError.buildMessage(expected, found),
      expected,
      found,
      location
    );
  }

  function peg$parseProgram() {
    var s0, s1, s2, s3;

    peg$silentFails++;
    s0 = peg$currPos;
    s1 = peg$parse_();
    if (s1 !== peg$FAILED) {
      s2 = [];
      s3 = peg$parseStatement();
      while (s3 !== peg$FAILED) {
        s2.push(s3);
        s3 = peg$parseStatement();
      }
      if (s2 !== peg$FAILED) {
        peg$savedPos = s0;
        s1 = peg$c1(s2);
        s0 = s1;
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }
    peg$silentFails--;
    if (s0 === peg$FAILED) {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c0); }
    }

    return s0;
  }

  function peg$parseStatement() {
    var s0, s1;

    peg$silentFails++;
    s0 = peg$parseConditionalStatement();
    if (s0 === peg$FAILED) {
      s0 = peg$parseConditionalLoopStatement();
      if (s0 === peg$FAILED) {
        s0 = peg$parseVariableDeclaration();
        if (s0 === peg$FAILED) {
          s0 = peg$parseAssignmentStatement();
          if (s0 === peg$FAILED) {
            s0 = peg$parseStatementTerminator();
            if (s0 === peg$FAILED) {
              s0 = peg$parseReturnStatement();
              if (s0 === peg$FAILED) {
                s0 = peg$currPos;
                s1 = peg$parseComment();
                if (s1 !== peg$FAILED) {
                  peg$savedPos = s0;
                  s1 = peg$c3();
                }
                s0 = s1;
                if (s0 === peg$FAILED) {
                  s0 = peg$parseFunctionDefinition();
                  if (s0 === peg$FAILED) {
                    s0 = peg$parseExpressionStatement();
                    if (s0 === peg$FAILED) {
                      s0 = peg$parseCompoundStatement();
                    }
                  }
                }
              }
            }
          }
        }
      }
    }
    peg$silentFails--;
    if (s0 === peg$FAILED) {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c2); }
    }

    return s0;
  }

  function peg$parseReturnStatement() {
    var s0, s1, s2, s3, s4, s5;

    peg$silentFails++;
    s0 = peg$currPos;
    if (input.substr(peg$currPos, 6) === peg$c5) {
      s1 = peg$c5;
      peg$currPos += 6;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c6); }
    }
    if (s1 !== peg$FAILED) {
      s2 = peg$parse_();
      if (s2 !== peg$FAILED) {
        s3 = peg$parseExpression();
        if (s3 !== peg$FAILED) {
          s4 = peg$parse_();
          if (s4 !== peg$FAILED) {
            s5 = peg$parseStatementTerminator();
            if (s5 !== peg$FAILED) {
              peg$savedPos = s0;
              s1 = peg$c7(s3);
              s0 = s1;
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }
    peg$silentFails--;
    if (s0 === peg$FAILED) {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c4); }
    }

    return s0;
  }

  function peg$parseConditionalStatement() {
    var s0, s1, s2, s3, s4, s5, s6, s7;

    peg$silentFails++;
    s0 = peg$currPos;
    if (input.substr(peg$currPos, 2) === peg$c9) {
      s1 = peg$c9;
      peg$currPos += 2;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c10); }
    }
    if (s1 !== peg$FAILED) {
      s2 = peg$parse_();
      if (s2 !== peg$FAILED) {
        s3 = peg$parseExpression();
        if (s3 !== peg$FAILED) {
          s4 = peg$parse_();
          if (s4 !== peg$FAILED) {
            s5 = peg$parseStatement();
            if (s5 !== peg$FAILED) {
              s6 = peg$parse_();
              if (s6 !== peg$FAILED) {
                s7 = peg$parseElseStatement();
                if (s7 === peg$FAILED) {
                  s7 = null;
                }
                if (s7 !== peg$FAILED) {
                  peg$savedPos = s0;
                  s1 = peg$c11(s3, s5, s7);
                  s0 = s1;
                } else {
                  peg$currPos = s0;
                  s0 = peg$FAILED;
                }
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }
    peg$silentFails--;
    if (s0 === peg$FAILED) {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c8); }
    }

    return s0;
  }

  function peg$parseConditionalLoopStatement() {
    var s0, s1, s2, s3, s4, s5, s6;

    peg$silentFails++;
    s0 = peg$currPos;
    if (input.substr(peg$currPos, 5) === peg$c13) {
      s1 = peg$c13;
      peg$currPos += 5;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c14); }
    }
    if (s1 !== peg$FAILED) {
      s2 = peg$parse_();
      if (s2 !== peg$FAILED) {
        s3 = peg$parseExpression();
        if (s3 !== peg$FAILED) {
          s4 = peg$parse_();
          if (s4 !== peg$FAILED) {
            s5 = peg$parseStatement();
            if (s5 !== peg$FAILED) {
              s6 = peg$parse_();
              if (s6 !== peg$FAILED) {
                peg$savedPos = s0;
                s1 = peg$c15(s3, s5);
                s0 = s1;
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }
    peg$silentFails--;
    if (s0 === peg$FAILED) {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c12); }
    }

    return s0;
  }

  function peg$parseElseStatement() {
    var s0, s1, s2, s3;

    peg$silentFails++;
    s0 = peg$currPos;
    if (input.substr(peg$currPos, 4) === peg$c17) {
      s1 = peg$c17;
      peg$currPos += 4;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c18); }
    }
    if (s1 !== peg$FAILED) {
      s2 = peg$parse_();
      if (s2 !== peg$FAILED) {
        s3 = peg$parseStatement();
        if (s3 !== peg$FAILED) {
          peg$savedPos = s0;
          s1 = peg$c19(s3);
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }
    peg$silentFails--;
    if (s0 === peg$FAILED) {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c16); }
    }

    return s0;
  }

  function peg$parseFunctionCall() {
    var s0, s1, s2, s3, s4, s5, s6, s7, s8;

    peg$silentFails++;
    s0 = peg$currPos;
    s1 = peg$parseIdentifier();
    if (s1 !== peg$FAILED) {
      s2 = peg$parse_();
      if (s2 !== peg$FAILED) {
        if (input.charCodeAt(peg$currPos) === 40) {
          s3 = peg$c21;
          peg$currPos++;
        } else {
          s3 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c22); }
        }
        if (s3 !== peg$FAILED) {
          s4 = peg$parse_();
          if (s4 !== peg$FAILED) {
            s5 = peg$parseActualParameters();
            if (s5 !== peg$FAILED) {
              s6 = peg$parse_();
              if (s6 !== peg$FAILED) {
                if (input.charCodeAt(peg$currPos) === 41) {
                  s7 = peg$c23;
                  peg$currPos++;
                } else {
                  s7 = peg$FAILED;
                  if (peg$silentFails === 0) { peg$fail(peg$c24); }
                }
                if (s7 !== peg$FAILED) {
                  s8 = peg$parse_();
                  if (s8 !== peg$FAILED) {
                    peg$savedPos = s0;
                    s1 = peg$c25(s1, s5);
                    s0 = s1;
                  } else {
                    peg$currPos = s0;
                    s0 = peg$FAILED;
                  }
                } else {
                  peg$currPos = s0;
                  s0 = peg$FAILED;
                }
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }
    peg$silentFails--;
    if (s0 === peg$FAILED) {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c20); }
    }

    return s0;
  }

  function peg$parseArrayLookup() {
    var s0, s1, s2, s3, s4, s5, s6, s7;
